[gd_scene load_steps=3 format=3 uid="uid://dsjerui1v2v3d"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_0t1g8"]
[ext_resource type="FontFile" uid="uid://crcjskahgfhq2" path="res://Font/andina.ttf" id="1_njf4l"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_0t1g8")

[node name="LabelScore" type="Label" parent="."]
offset_left = 51.0
offset_top = 89.0
offset_right = 301.0
offset_bottom = 130.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_njf4l")
theme_override_font_sizes/font_size = 30
text = "PUNTUACIÃ“N: 0"

[node name="LabelLifes" type="Label" parent="."]
offset_left = 1598.0
offset_top = 99.0
offset_right = 1827.0
offset_bottom = 140.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_njf4l")
theme_override_font_sizes/font_size = 30
text = "VIDAS: 0"

[node name="GameStatePanel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GameStatePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_njf4l")
theme_override_font_sizes/font_size = 300
text = "GANASTE"

[node name="RestartButton" type="Button" parent="GameStatePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = 244.0
offset_right = 4.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_njf4l")
theme_override_font_sizes/font_size = 60
text = "REINICIAR"

[connection signal="pressed" from="GameStatePanel/RestartButton" to="." method="_on_restart_button_pressed"]
